<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
	<parent>
		<artifactId>custom-components</artifactId>
		<groupId>org.assimbly</groupId>
		<version>5.1.0</version>
	</parent>

  <artifactId>pdftotext</artifactId>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>21</maven.compiler.release>
    <maven.versions.rules>file:///${project.basedir}/../rules.xml</maven.versions.rules>
  </properties>

  <distributionManagement> 
		<repository>
	  		<id>github</id> 
			<name>Temporary Staging Repository</name> 
			<url>https://maven.pkg.github.com/assimbly/custom-components</url>
		</repository> 
  </distributionManagement>

  <dependencies>
	  <dependency>
		  <groupId>org.apache.pdfbox</groupId>
		  <artifactId>pdfbox</artifactId>
		  <version>${pdfbox.version}</version>
	  </dependency>
	  <dependency>
		  <groupId>org.bouncycastle</groupId>
		  <artifactId>bcprov-jdk18on</artifactId>
		  <version>${bouncycastle.version}</version>
	  </dependency>
  </dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-toolchains-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>toolchain</goal>
						</goals>
						<configuration>
							<toolchains>
								<jdk>
									<version>25</version>
								</jdk>
							</toolchains>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
